[US 1] Implemented persistence, service and endpoint